# WhisperForge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  PROJECT_STATUS.md  README.md  cliff.toml  create_test_speech.py  debug_mel.rs  mel_debug.txt  mise.toml  release.toml
.cargo/: config.toml
.claude/: claude.toml  context.md  settings.json  settings.local.json
.claude/commands/: bench.md  check.md  phase.md  release.md  stream-test.md  test.md
.claude/prompts/: code-review.md  debugging.md  task-breakdown.md
.github/workflows/: ci.yml  release.yml
.mise-tasks/: check-changelog  commit-msg  release-check
scripts/: uat-stream.ps1
scripts/hooks/: commit-msg  pre-commit  pre-push
test_data/: metadata.txt
whisperforge/: Cargo.toml  README.md
whisperforge-align/: Cargo.toml  README.md
whisperforge-align/src/: batching.rs  lib.rs  segmentation.rs  srt.rs  vad.rs
whisperforge-cli/: Cargo.toml  README.md
whisperforge-cli/src/: main.rs
whisperforge-convert/: Cargo.toml  README.md
whisperforge-convert/src/: convert.rs  inspect.rs  lib.rs  main.rs
whisperforge-core/: Cargo.toml  README.md
whisperforge-core/src/: attn_extract.rs  audio.rs  audio_capture.rs  audio_stream.rs  decoding.rs  embed.rs  kv_cache.rs  language.rs  lib.rs  load.rs  model.rs  stft_gpu.rs  stream_decode.rs  streaming.rs  transcribe.rs  vad_silero.rs
whisperforge-core/tests/: model_shapes.rs  stream_integration.rs  wer_benchmark.rs
whisperforge-diarize/: Cargo.toml  README.md
whisperforge-diarize/src/: clustering.rs  diarizer.rs  lib.rs
whisperforge/benches/: stream_latency.rs
whisperforge/src/: device.rs  interactive.rs  main.rs  stream_ui.rs
whisperforge/src/commands/: convert.rs  list.rs  list_models.rs  mod.rs  pull.rs  stream.rs  transcribe.rs
