[workspace]
members = [
    "whisperforge-core",
    "whisperforge-align", 
    "whisperforge-diarize",
    "whisperforge-cli",
    "whisperforge-convert",
]
resolver = "2"

[workspace.dependencies]
# Core ML framework (minimal features for now)
burn = { version = "0.20.0", features = ["std", "ndarray"] }
burn-ndarray = "0.20.0"

# Audio processing
rubato = "1.0"
hound = "3.5"

# Text processing
tokenizers = "0.20"

# VAD and alignment
earshot = "0.1"

# Serialization and CLI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"

# Development dependencies
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true