[workspace]
members = [
    "whisperforge-core",
    "whisperforge-align",
    "whisperforge-diarize",
    "whisperforge-cli",
    "whisperforge-convert",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bevsxyz/WhisperForge"
homepage = "https://github.com/bevsxyz/WhisperForge"
authors = ["bevsxyz"]
rust-version = "1.85"

[workspace.dependencies]
# Core ML framework
burn = { version = "0.21.0", features = ["std", "ndarray"] }
burn-ndarray = "0.21.0"

# Audio processing
rubato = "1.0"
rustfft = "6.2"

# Text processing
tokenizers = "0.20"

# VAD and alignment
earshot = "0.1"

# Serialization and CLI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"

# Compression (for decoding quality metrics)
flate2 = "1.0"

# RNG (for temperature sampling in decoding)
rand = "0.8"

# Development dependencies
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true