[workspace]
members = [
    "whisperforge-core",
    "whisperforge-align",
    "whisperforge-diarize",
    "whisperforge",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bevsxyz/WhisperForge"
homepage = "https://github.com/bevsxyz/WhisperForge"
authors = ["bevsxyz"]
rust-version = "1.85"

[workspace.dependencies]
# Core ML framework
burn = { version = "0.21.0", features = ["std", "burn-flex"] }
burn-flex = "0.21.0"

# Audio processing
rubato = "3.0"
rustfft = "6.2"
cpal = "0.15"
ringbuf = "0.4"

# Text processing
tokenizers = "0.23"

# Serialization and CLI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

# Error handling and utilities
anyhow = "1.0"
thiserror = "2.0"

# Compression (for decoding quality metrics)
flate2 = "1.0"

# RNG (for temperature sampling in decoding)
rand = "0.10"

# ONNX VAD inference
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std", "download-binaries", "copy-dylibs"] }

# Terminal UI and logging
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Development dependencies
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true
