[package]
name = "whisperforge-align"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "VAD segmentation, batched transcription, and SRT output for WhisperForge"
keywords = ["whisperforge", "whisper", "vad", "srt", "subtitles"]
categories = ["multimedia::audio"]

[dependencies]
burn = { workspace = true, features = ["std", "burn-flex"] }
burn-flex = { workspace = true }
earshot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
rubato = { workspace = true }
tokenizers = { workspace = true }
whisperforge-core = { path = "../whisperforge-core", version = "0.2.0" }
