[package]
name = "whisperforge-align"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Voice activity detection, audio segmentation, and SRT subtitle generation for speech transcription"
keywords = ["whisperforge", "whisper", "vad", "speech-to-text", "srt", "subtitles", "transcription", "segmentation"]
categories = ["multimedia::audio"]

[dependencies]
burn = { workspace = true, features = ["std", "burn-flex"] }
burn-flex = { workspace = true }
earshot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
rubato = { workspace = true }
tokenizers = { workspace = true }
whisperforge-core = { path = "../whisperforge-core", version = "0.3" }
