[package]
name = "whisperforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "GPU-accelerated Whisper transcription CLI (WGPU/CPU, speaker diarization)"
keywords = ["whisperforge", "whisper", "speech-to-text", "wgpu", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "whisperforge"
path = "src/main.rs"

[[bin]]
name = "wf"
path = "src/main.rs"

[dependencies]
whisperforge-core = { path = "../whisperforge-core" }
whisperforge-align = { path = "../whisperforge-align" }
whisperforge-diarize = { path = "../whisperforge-diarize" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
burn = { workspace = true, features = ["std", "burn-flex", "wgpu"] }
burn-flex = { workspace = true }
burn-wgpu = { version = "0.21.0", optional = true }

[features]
cubecl-stft = ["dep:burn-wgpu", "whisperforge-core/cubecl-stft"]
