[package]
name = "whisperforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Fast GPU-accelerated speech-to-text CLI with streaming, quantization, speaker diarization, and multilingual support"
keywords = ["whisper", "speech-to-text", "transcription", "gpu", "wgpu"]
categories = ["command-line-utilities", "multimedia::audio"]
readme = "README.md"

[[bin]]
name = "whisperforge"
path = "src/main.rs"

[[bin]]
name = "wf"
path = "src/main.rs"

[dependencies]
whisperforge-core = { path = "../whisperforge-core", version = "0.3" }
whisperforge-align = { path = "../whisperforge-align", version = "0.3" }
whisperforge-diarize = { path = "../whisperforge-diarize", version = "0.3" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
burn = { workspace = true, features = ["std", "burn-flex"] }
burn-flex = { workspace = true }
burn-wgpu = { version = "0.21.0", optional = true }

[features]
cubecl-stft = ["dep:burn-wgpu", "whisperforge-core/cubecl-stft"]
gpu = ["burn/wgpu"]
default = ["gpu"]

# Disable gpu feature on Windows to avoid wgpu version conflict
[target.'cfg(windows)'.dev-dependencies]
# Placeholder to ensure target-specific overrides compile
