[package]
name = "whisperforge-convert"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "HuggingFace safetensors to Burn NamedMpk model converter for WhisperForge"
keywords = ["whisperforge", "whisper", "burn", "huggingface"]
categories = ["command-line-utilities", "science"]

[dependencies]
whisperforge-core = { path = "../whisperforge-core", version = "0.3" }
burn = { workspace = true, features = ["std", "train", "burn-flex"] }
burn-flex = { workspace = true }
candle-core = "0.9.1"
safetensors = "0.4.2"
hf-hub = { version = "0.3.2", features = ["tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
half = "2.3.1"
