[package]
name = "whisperforge-convert"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Convert HuggingFace Whisper safetensors to Burn with INT8 quantization support"
keywords = ["whisperforge", "whisper", "model-conversion", "quantization", "int8", "huggingface", "safetensors", "burn"]
categories = ["command-line-utilities", "science"]
readme = "README.md"

[dependencies]
whisperforge-core = { path = "../whisperforge-core", version = "0.3" }
burn = { workspace = true, features = ["std", "train", "burn-flex"] }
burn-flex = { workspace = true }
candle-core = "0.9.1"
safetensors = "0.4.2"
hf-hub = { version = "0.3.2", features = ["tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
half = "2.3.1"
