[package]
name = "whisperforge-core"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { workspace = true, features = ["std", "ndarray", "wgpu"] }
burn-ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokenizers = { workspace = true }
rubato = { workspace = true }
hound = { workspace = true }
rustfft = { workspace = true }
audioadapter-buffers = "2.0"
