[package]
name = "whisperforge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Whisper model, audio pipeline, and KV-cached decoding"
keywords = ["whisperforge", "whisper", "speech-to-text", "burn", "ml"]
categories = ["multimedia::audio", "science"]

[dependencies]
burn = { workspace = true, features = ["std", "ndarray"] }
burn-ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
rand = { workspace = true }
tokenizers = { workspace = true }
rubato = { workspace = true }
rustfft = { workspace = true }
audioadapter-buffers = "2.0"
symphonia = { version = "0.5", default-features = false, features = [
    "pcm", "wav", "flac", "vorbis", "ogg", "mkv",
    "mp3", "aac", "isomp4",
] }

[lints.clippy]
# Lints that fire inside the frozen model.rs which cannot be modified.
let_and_return = "allow"
legacy_numeric_constants = "allow"
single_range_in_vec_init = "allow"
