[package]
name = "whisperforge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "GPU-accelerated Whisper model inference with streaming audio, quantization, and KV-cached decoding"
keywords = ["whisper", "speech-to-text", "gpu", "quantization", "burn"]
categories = ["multimedia::audio", "science"]
readme = "README.md"

[dependencies]
burn = { workspace = true, features = ["std", "burn-flex"] }
burn-flex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
rand = { workspace = true }
tokenizers = { workspace = true }
rubato = { workspace = true }
rustfft = { workspace = true }
audioadapter-buffers = "3.0"
symphonia = { version = "0.5", optional = true, default-features = false, features = [
    "pcm", "wav", "flac", "vorbis", "ogg", "mkv",
    "mp3", "aac", "isomp4",
] }
cubecl = { version = "0.10.0", optional = true }
burn-wgpu = { version = "0.21.0", optional = true }

[features]
default = ["file-io"]
file-io = ["dep:symphonia"]
cubecl-stft = ["dep:cubecl", "dep:burn-wgpu"]

[lints.clippy]
# Lints that fire inside the frozen model.rs which cannot be modified.
let_and_return = "allow"
legacy_numeric_constants = "allow"
single_range_in_vec_init = "allow"
