[package]
name = "whisperforge-diarize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Speaker diarization via embedding clustering for WhisperForge"
keywords = ["whisperforge", "whisper", "diarization", "speaker"]
categories = ["multimedia::audio"]

[dependencies]
anyhow = { workspace = true }
