[package]
name = "whisperforge-diarize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Speaker diarization for speech transcription via embedding clustering"
keywords = ["whisperforge", "whisper", "diarization", "speaker", "voice", "transcription", "audio", "clustering"]
categories = ["multimedia::audio"]

[dependencies]
anyhow = { workspace = true }
