[package]
name = "whisperforge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Fast GPU-accelerated speech-to-text CLI with streaming, quantization, speaker diarization, and multilingual support. Includes model conversion from HuggingFace safetensors."
keywords = ["whisper", "speech-to-text", "transcription", "gpu", "wgpu"]
categories = ["command-line-utilities", "multimedia::audio"]
readme = "README.md"
autobins = false
autobenches = false

[[bin]]
name = "wforge"
path = "src/main.rs"

[[bin]]
name = "stream_bench"
path = "benches/stream_latency.rs"

[dependencies]
whisperforge-core = { path = "../whisperforge-core", version = "0.4" }
whisperforge-align = { path = "../whisperforge-align", version = "0.4" }
whisperforge-diarize = { path = "../whisperforge-diarize", version = "0.4" }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
cpal = { workspace = true }
ringbuf = { workspace = true }
ort = { workspace = true }
crossterm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# `train` feature is required for Module::quantize_weights (used by `wforge convert --quantize int8`).
burn = { workspace = true, features = ["std", "train", "burn-flex"] }
burn-flex = { workspace = true }
burn-wgpu = { version = "0.21.0", optional = true }
burn-cuda = { version = "0.21.0", optional = true }
# Model conversion (`wforge convert`) deps.
safetensors = "0.7"
hf-hub = { version = "0.5", features = ["tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
half = "2.3.1"
hound = "3.5"

[features]
cubecl-stft = ["dep:burn-wgpu", "whisperforge-core/cubecl-stft"]
gpu = ["burn/wgpu"]
cuda = ["dep:burn-cuda"]
default = ["gpu"]
